# LNWzZ_223

./: README.md  hello from voon  lst97 - Test  pyproject.toml  sqlite3.db
lnwzz/: .env  database.py  dcapi.py  gsender.py  https.py
lnwzz/domain/: domain_srv.crt  domain_srv.key
lnwzz/html/: index.html
lnwzz/html/commons/: join.html  login.html  query.html  redirect.html  register.html
lnwzz/html/scripts/: query.js  register.js
lnwzz/html/styles/: style.css
lnwzz/utils/: debug.py  hash.py  otp.py  resources.py
tests/: test_lnwzz.py
tests/html/: index.html
tests/html/commons/: join.html  login.html  query.html  redirect.html  register.html
tests/html/scripts/: register.js
tests/html/styles/: 404.css  style.css
